--- a/assets/scss/custom/_offsite.scss
+++ b/assets/scss/custom/_offsite.scss
@@ -1,12 +1,3 @@
-.offsite .logo {
-    height: 3.750em;
-    width: 12.500em;
-    position: relative;
-    display: block;
-    margin: 4rem auto;
-}
-
-
 .offsite h3 {
 	color: $primary-color;
 	font-weight: $font-bold;
